設定項目を追加

--- a/src/Server/CognitiveServiceSample.Jobs/App.config
+++ b/src/Server/CognitiveServiceSample.Jobs/App.config
@@ -6,9 +6,16 @@
     <add name="AzureWebJobsDashboard" connectionString="" />
     <add name="AzureWebJobsStorage" connectionString="" />
   </connectionStrings>
-    <startup> 
+  <appSettings>
+    <add key="TranslatorAPIKey" value="" />
+    <add key="TwitterConsumerKey" value="" />
+    <add key="TwitterConsumerSecret" value="" />
+    <add key="TwitterAccessToken" value="" />
+    <add key="TwitterAccessTokenSecret" value="" />
+  </appSettings>
+  <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
-    </startup>
+  </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
