--- a/src/Server/CognitiveServiceSample.Jobs/App.config
+++ b/src/Server/CognitiveServiceSample.Jobs/App.config
@@ -12,6 +12,8 @@
     <add key="TwitterConsumerSecret" value="" />
     <add key="TwitterAccessToken" value="" />
     <add key="TwitterAccessTokenSecret" value="" />
+    <add key="VisionAPIAPIKey" value="" />
+    <add key="VisionAPIEndpoint" value="" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2" />
@@ -65,6 +67,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Diagnostics.DiagnosticSource" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-4.0.1.0" newVersion="4.0.1.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.IO" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.1.1.0" newVersion="4.1.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
