--- a/src/Server/CognitiveServiceSample.Jobs/packages.config
+++ b/src/Server/CognitiveServiceSample.Jobs/packages.config
@@ -12,6 +12,7 @@
   <package id="Microsoft.Extensions.Options" version="1.1.2" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
+  <package id="Microsoft.ProjectOxford.Vision" version="1.0.393" targetFramework="net462" />
   <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
@@ -65,6 +66,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.4.0-preview1-25305-02" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="WindowsAzure.Storage" version="8.1.3" targetFramework="net462" />
