--- a/src/Server/CognitiveServiceSample.Functions/packages.config
+++ b/src/Server/CognitiveServiceSample.Functions/packages.config
@@ -1,34 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="CoreTweet" version="0.8.0.384" targetFramework="net462" />
-  <package id="Microsoft.Azure.DocumentDB" version="1.14.1" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net462" />
+  <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net462" />
   <package id="Microsoft.Azure.KeyVault.Core" version="2.0.4" targetFramework="net462" />
   <package id="Microsoft.Azure.WebJobs" version="2.0.0" targetFramework="net462" />
   <package id="Microsoft.Azure.WebJobs.Core" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.Azure.WebJobs.Extensions" version="2.0.0" targetFramework="net462" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.4" targetFramework="net462" />
   <package id="Microsoft.Data.Edm" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Data.OData" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Data.Services.Client" version="5.8.2" targetFramework="net462" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.1.1" targetFramework="net462" />
   <package id="Microsoft.Extensions.Options" version="1.1.2" targetFramework="net462" />
   <package id="Microsoft.Extensions.Primitives" version="1.1.1" targetFramework="net462" />
+  <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="net462" />
-  <package id="Microsoft.ProjectOxford.Vision" version="1.0.393" targetFramework="net462" />
-  <package id="Microsoft.Web.WebJobs.Publish" version="1.0.13" targetFramework="net462" />
+  <package id="Microsoft.Tpl.Dataflow" version="4.5.24" targetFramework="net462" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="3.2.3" targetFramework="net462" />
+  <package id="ncrontab" version="3.3.0" targetFramework="net462" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
   <package id="System.AppContext" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections" version="4.3.0" targetFramework="net462" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="net462" />
   <package id="System.ComponentModel" version="4.3.0" targetFramework="net462" />
-  <package id="System.ComponentModel.EventBasedAsync" version="4.3.0" targetFramework="net462" />
+  <package id="System.ComponentModel.EventBasedAsync" version="4.0.11" targetFramework="net462" />
   <package id="System.Console" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.3.1" targetFramework="net462" />
   <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net462" />
   <package id="System.Diagnostics.Tracing" version="4.3.0" targetFramework="net462" />
-  <package id="System.Dynamic.Runtime" version="4.3.0" targetFramework="net462" />
+  <package id="System.Dynamic.Runtime" version="4.0.0" targetFramework="net462" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net462" />
   <package id="System.Globalization.Calendars" version="4.3.0" targetFramework="net462" />
   <package id="System.IO" version="4.3.0" targetFramework="net462" />
@@ -38,10 +40,10 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq" version="4.3.0" targetFramework="net462" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net462" />
-  <package id="System.Linq.Queryable" version="4.3.0" targetFramework="net462" />
+  <package id="System.Linq.Queryable" version="4.0.0" targetFramework="net462" />
   <package id="System.Net.Http" version="4.3.2" targetFramework="net462" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="net462" />
-  <package id="System.Net.Requests" version="4.3.0" targetFramework="net462" />
+  <package id="System.Net.Requests" version="4.0.11" targetFramework="net462" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="net462" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="net462" />
   <package id="System.Reflection" version="4.3.0" targetFramework="net462" />
@@ -66,8 +68,8 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0-preview1-25305-02" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
+  <package id="WindowsAzure.ServiceBus" version="4.1.1" targetFramework="net462" />
   <package id="WindowsAzure.Storage" version="8.1.3" targetFramework="net462" />
 </packages>
