設定を追加

--- a/src/Server/CognitiveServicesSample.Server/appsettings.json
+++ b/src/Server/CognitiveServicesSample.Server/appsettings.json
@@ -3,6 +3,10 @@
     "IncludeScopes": false,
     "LogLevel": {
       "Default": "Warning"
+    },
+    "CosmosDbSetting": {
+      "EndpointUri": "",
+      "PrimaryKey": ""
     }
   }
 }
