--- a/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
+++ b/src/Client/CognitiveServicesSample.Client/CognitiveServicesSample.Client.csproj
@@ -36,6 +36,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\NoSelectedListViewBehavior.cs" />
     <Compile Include="Consts.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\CategoryService.cs" />
