--- a/src/Client/CognitiveServicesSample.Client.Droid/packages.config
+++ b/src/Client/CognitiveServicesSample.Client.Droid/packages.config
@@ -4,6 +4,7 @@
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid71" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid71" />
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid71" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="monoandroid71" />
   <package id="Prism.Autofac.Forms" version="6.3.0" targetFramework="monoandroid71" />
   <package id="Prism.Core" version="6.3.0" targetFramework="monoandroid71" />
   <package id="Prism.Forms" version="6.3.0" targetFramework="monoandroid71" />
@@ -48,6 +49,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="monoandroid71" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="monoandroid71" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid71" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="25.3.1" targetFramework="monoandroid71" />
