--- a/src/Client/CognitiveServicesSample.Client.UWP/project.json
+++ b/src/Client/CognitiveServicesSample.Client.UWP/project.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "Autofac": "4.6.0",
     "Microsoft.NETCore.UniversalWindowsPlatform": "5.3.3",
+    "Newtonsoft.Json": "9.0.1",
     "Prism.Autofac.Forms": "6.3.0",
     "Prism.Core": "6.3.0",
     "Prism.Forms": "6.3.0",
+    "System.ValueTuple": "4.3.1",
     "Xamarin.Forms": "2.3.5.239-pre3"
   },
   "frameworks": {
