--- a/src/Client/CognitiveServicesSample.Client/project.json
+++ b/src/Client/CognitiveServicesSample.Client/project.json
@@ -6,6 +6,7 @@
     "NETStandard.Library": "1.6.0",
     "Newtonsoft.Json": "9.0.1",
     "Prism.Autofac.Forms": "6.3.0",
+    "System.ValueTuple": "4.3.1",
     "Xamarin.Forms": "2.3.5.239-pre3"
   },
   "frameworks": {
