--- a/src/Commons/CognitiveServicesSample.Commons/CognitiveServicesSample.Commons.csproj
+++ b/src/Commons/CognitiveServicesSample.Commons/CognitiveServicesSample.Commons.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ValueTuple" Version="4.3.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Update="NETStandard.Library" Version="1.6.1" />
   </ItemGroup>
 
