--- a/src/Server/CognitiveServiceSample.Functions/packages.config
+++ b/src/Server/CognitiveServiceSample.Functions/packages.config
@@ -68,6 +68,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="WindowsAzure.ServiceBus" version="4.1.1" targetFramework="net462" />
