--- a/src/Server/CognitiveServiceSample.Jobs/packages.config
+++ b/src/Server/CognitiveServiceSample.Jobs/packages.config
@@ -66,7 +66,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
-  <package id="System.ValueTuple" version="4.4.0-preview1-25305-02" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="WindowsAzure.Storage" version="8.1.3" targetFramework="net462" />
