--- a/src/Server/CognitiveServicesSample.Web/packages.config
+++ b/src/Server/CognitiveServicesSample.Web/packages.config
@@ -83,6 +83,7 @@
   <package id="System.Threading" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net462" />
   <package id="System.Threading.Timer" version="4.3.0" targetFramework="net462" />
+  <package id="System.ValueTuple" version="4.3.1" targetFramework="net462" />
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="net462" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="net462" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
